Add heap & heapsort

--- a/lib/test/Makefile
+++ b/lib/test/Makefile
@@ -5,16 +5,19 @@ RM=rm -f
 
 all: clean sort_test
 
-sort_test: sort .sort_test.o .sort_test
+sort_test: data_structure sort .sort_test.o .sort_test
 	
-.sort_test: sort_test.o sort.o
-	$(CXX) $(CXXFLAGS) -o sort_test sort_test.o sort.o
+.sort_test: sort_test.o sort.o ds.o
+	$(CXX) $(CXXFLAGS) -o sort_test sort_test.o sort.o ds.o
 
 .sort_test.o: sort_test.cpp ../header/io.hpp
 	$(CXX) $(CXXFLAGS) -c -o sort_test.o sort_test.cpp
 
-sort: ../header/sort.hpp ../src/sort.cpp
+sort: ../header/sort.hpp ../header/data_structure.hpp ../src/sort.cpp
 	$(CXX) $(CXXFLAGS) -c -o sort.o ../src/sort.cpp
+
+data_structure: ../header/data_structure.hpp ../src/data_structure.cpp ../header/io.hpp
+	$(CXX) $(CXXFLAGS) -c -o ds.o ../src/data_structure.cpp
 
 clean:
 	$(RM) *.o sort_test
