Double linked list & hash table

--- a/lib/test/Makefile
+++ b/lib/test/Makefile
@@ -3,7 +3,7 @@ CXX=g++
 CXXFLAGS=-std=c++11
 RM=rm -f
 
-all: clean sort_test
+all: clean sort_test ds_test
 
 sort_test: data_structure sort .sort_test.o .sort_test
 	
@@ -18,6 +18,14 @@ sort: ../header/sort.hpp ../header/data_structure.hpp ../src/sort.cpp
 
 data_structure: ../header/data_structure.hpp ../src/data_structure.cpp ../header/io.hpp
 	$(CXX) $(CXXFLAGS) -c -o ds.o ../src/data_structure.cpp
+
+ds_test: data_structure .ds_test.o .ds_test
+
+.ds_test: ds.o ds_test.o
+	$(CXX) $(CXXFLAGS) -o ds_test ds.o ds_test.o
+
+.ds_test.o: ds_test.cpp ../header/io.hpp ../header/data_structure.hpp
+	$(CXX) $(CXXFLAGS) -c -o ds_test.o ds_test.cpp
 
 clean:
 	$(RM) *.o sort_test
